# ChangeLog for dev-perl/MIME-tools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MIME-tools/ChangeLog,v 1.66 2011/01/17 12:31:41 tove Exp $

*MIME-tools-5.500 (17 Jan 2011)

  17 Jan 2011; Torsten Veller <tove@gentoo.org> +MIME-tools-5.500.ebuild:
  Version bump

  29 Oct 2010; Fabian Groffen <grobian@gentoo.org> MIME-tools-5.428.ebuild:
  Marked ~ppc-macos

*MIME-tools-5.428 (23 Apr 2010)

  23 Apr 2010; Torsten Veller <tove@gentoo.org> +MIME-tools-5.428.ebuild:
  Version bump

  29 Jan 2010; Torsten Veller <tove@gentoo.org> MIME-tools-5.427.ebuild:
  Fix LICENSE: same terms as perl (#301969). Maintenance

  07 May 2009; Torsten Veller <tove@gentoo.org> -MIME-tools-5.420.ebuild:
  Cleanup

  06 May 2009; Jeroen Roovers <jer@gentoo.org> MIME-tools-5.427.ebuild:
  Stable for HPPA (bug #268213).

  04 May 2009; Raúl Porcel <armin76@gentoo.org> MIME-tools-5.427.ebuild:
  alpha/ia64/sparc stable wrt #268213

  03 May 2009; Markus Meier <maekke@gentoo.org> MIME-tools-5.427.ebuild:
  amd64 stable, bug #268213

  03 May 2009; Brent Baude <ranger@gentoo.org> MIME-tools-5.427.ebuild:
  stable ppc64, bug 268213

  02 May 2009; nixnut <nixnut@gentoo.org> MIME-tools-5.427.ebuild:
  ppc stable #268213

  02 May 2009; Torsten Veller <tove@gentoo.org> MIME-tools-5.427.ebuild:
  Stable on x86 (#268213)

  01 May 2009; Torsten Veller <tove@gentoo.org> -MIME-tools-5.417.ebuild:
  Cleanup

  01 Jan 2009; Raúl Porcel <armin76@gentoo.org> MIME-tools-5.427.ebuild:
  Add ~s390

*MIME-tools-5.427 (04 Jul 2008)

  04 Jul 2008; Torsten Veller <tove@gentoo.org> +MIME-tools-5.427.ebuild:
  Version bump (#227847)

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> MIME-tools-5.420.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> MIME-tools-5.420.ebuild:
  Stable on x86, bug #169152.

  10 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -MIME-tools-5.415.ebuild, -MIME-tools-5.416.ebuild,