@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST File-Remove-1.42.tar.gz 27592 RMD160 4dbc9d092e436984c876126fe716027a9a5ff8b5 SHA1 09d2bf0d6a86155e17fe4a82e177d5f1c31d39e2 SHA256 2ec2643c4e1a721965ed70ce184b72ae831c82b577420612a59eba8a0ce2a504
+DIST File-Remove-1.46.tar.gz 35399 RMD160 82d39fe2016be9d72c3a5dd7b121b26b0ac86de0 SHA1 689446876002c111d683c63f9c4e7f3ebd2a2f93 SHA256 6f49598369a810fb8dfd642f548431cd92b035ffcdb8b9aabd6b9e844c778178
 EBUILD File-Remove-1.42.ebuild 554 RMD160 5079eacc6da9f462c7e64af18f512cff983892de SHA1 a15d87f416100eaef2f476430ff4ce4512235d9f SHA256 e9dbef33c64636950f61328344376c70e3ca178df4cd6d621ca6a35a0df7c4ba
-MISC ChangeLog 7305 RMD160 fe24b73305d09ee0128f29921a355f65d9f8d37f SHA1 c90b1ac29b8bf3c47d8aa52f3288df25ca096ec5 SHA256 6a6c1923f580002c729e50655ddd40856993422c19ed7c55cee3e327b4636856
+EBUILD File-Remove-1.460.ebuild 560 RMD160 cb9a0e137206fd808acefd67a2655c45b75cae6c SHA1 82d321e625d0d079c912a1484798d6cf416778d1 SHA256 37991d21af33fda44244b7477a7cf51731ecf70e28edab99f50acba1a72362c7
+MISC ChangeLog 7430 RMD160 83e8d1ffdfd5abd16a08867042b21945d02efccf SHA1 86075a26e6da2c0a0256894f8cf45ed816f99a88 SHA256 30dd313a2663805ea01cf732fba71022a0d73c060b34716eec686af62a6ba198
 MISC metadata.xml 237 RMD160 c9f9dcd48bdafa240af0298d1ca8739c2efa36ae SHA1 4d9b6a36335bb9929110eff5664ddaa04a04566f SHA256 dc77f6c5b4427422dc486cd91ab04951289f232ed8365039f8a527e5ec1d2f03
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk0wi7AACgkQV3J2n04EauwIogCcDPEe6qevvrkKcCWOheAdVHsD
-O5QAoIcRKsBsEAORRuPKLKDwSbwWdayZ
-=2dTl
+iEYEARECAAYFAk1eEb0ACgkQV3J2n04EauwrsQCgsGjkdnpNNxtwrc1YSflWkjQV
+ivIAn1cY6Ty42DC1rEN1rr5MV9gaWyJV
+=lGFp
 -----END PGP SIGNATURE-----
