@@ -4,15 +4,17 @@ Hash: SHA1
 DIST MIME-tools-5.427.tar.gz 391971 RMD160 c4ba32e528541b35ff75dd331f8d84261b7133f3 SHA1 8fda2cb93fdc76079cee35cdab4181cb18b312ed SHA256 844d2499fd2934d4836bd86dc73dd51955aea3fd88109b9d559d99449851fe6e
 DIST MIME-tools-5.428.tar.gz 398979 RMD160 64e6397bffa9172c00736b150ad088b92bc5f7e7 SHA1 f7fd3daf1b3a792d4b62414d9c2fbd40f2b62d70 SHA256 0e695b7fa2ace8315bd16aac24751f246cb25a495174fe3438598e46e633cb87
 DIST MIME-tools-5.500.tar.gz 391196 RMD160 54967b5a642d86c43612cbd3605ec27c20999592 SHA1 9a2506403d3217e25af79b10e4e7dfc344e4bbb6 SHA256 86dd37f9593714314e59fa6d4b066d3c9d1fd3d1d7f5e5a39c208680dee04d3f
+DIST MIME-tools-5.501.tar.gz 394197 RMD160 94331bdf0892709907aade4e5cdc89a35bc07287 SHA1 967585601b4e6955b9312b6a44ac5c8f9a306bea SHA256 d375bd93d5ab76956f323daaa11583cf242d8d57e682216ee5ff2a6bfc1ac4ac
 EBUILD MIME-tools-5.427.ebuild 706 RMD160 4060969900b4b5afc60e700f5a1426abee1bcec0 SHA1 265e64f4f3d330a668580446a6e152c2a62a4f7e SHA256 393b28c2762efdfce02a84367449328d7796c7e1b418e0d7704c16d61abee501
 EBUILD MIME-tools-5.428.ebuild 728 RMD160 35f4111f5ad4babde0fda247283f04ef30b45075 SHA1 353afac7f39f92a60c2e6b0a1c596124c8101f69 SHA256 a310a31e68db04b307df8167b80d4d56a1a951ca815871a08209ca0795931424
 EBUILD MIME-tools-5.500.ebuild 774 RMD160 491f1babb817c7ac69103de0be352977802c3dc8 SHA1 3478b50f40d6ce0a178d242b2202320be43a785a SHA256 f5b9967c3a11a3a77751c44867944375d52c38aa27cabd95f2cfdbe91cc3dba1
-MISC ChangeLog 8203 RMD160 68dd3a2a10282686dd3075e616a14b5c2a504b61 SHA1 4ed33bc249fe2cca807a4c740338e3db9e66b625 SHA256 1674ab02f92011207a33eea2286daba2d19a52d782cd6531c54456da20c24a02
+EBUILD MIME-tools-5.501.ebuild 773 RMD160 04ba06f9a981f6f4e8b6414ae2287813c864b1fc SHA1 bec88540b07cef0252e413bb70533a5990056d83 SHA256 5094bfce76608c518fd10626de82cc27f85ce6b740f7297ef172030293be870d
+MISC ChangeLog 8326 RMD160 ee4a1b7a94b0e78a708fda3383b18ee252ffe491 SHA1 e99423cffb9bfe29d96546189dd938d479235ab2 SHA256 1db1d405727ea61d1a29e24b961bce0fdc536df85f19e4b7e82d27e86c8d414e
 MISC metadata.xml 236 RMD160 2c4db3315be7053ac1abbdd3de0bbb07fe035edc SHA1 b40c0b193c9f1a10af534d5b431978d4652c1c6d SHA256 bf34fae1fbcbfc55937aad5a38fe8b1f77123be38efe95d5e9d4aadd7e8d3232
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk00NrIACgkQV3J2n04EauwGbQCgqbThBjAvAmNZ7c2WrCNFotVE
-1BwAoM84JZgvk22FCcgj+zK5yIHeIjhm
-=wG3U
+iEYEARECAAYFAk1eEOcACgkQV3J2n04Eaux4hACeKUzrS2JVjg4/sK9pHy1iDVr7
+A4oAn1+93581/sQGNs18EnwnQdSJH+95
+=6OVl
 -----END PGP SIGNATURE-----
