@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/MIME-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/MIME-tools/ChangeLog,v 1.66 2011/01/17 12:31:41 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/MIME-tools/ChangeLog,v 1.67 2011/02/18 06:25:37 tove Exp $
+
+*MIME-tools-5.501 (18 Feb 2011)
+
+  18 Feb 2011; Torsten Veller <tove@gentoo.org> +MIME-tools-5.501.ebuild:
+  Version bump
 
 *MIME-tools-5.500 (17 Jan 2011)
 
